--- a/developerdashboard/src/css/common.css
+++ b/developerdashboard/src/css/common.css
@@ -22,3 +22,23 @@
     display: flex;
     flex-direction: column;
 }
+
+.input-line{
+    font-family: inherit;
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid #9b9b9b;
+    outline: 0;
+    font-size: 1.3rem;
+    padding: 7px 0;
+    background: transparent;
+    transition: border-color 0.2s;
+}
+
+.input-line:focus{
+    padding-bottom: 6px;  
+    /*font-weight: 700; */
+    border-width: 3px;
+    border-image: linear-gradient(to right, #11998e,#38ef7d);
+    border-image-slice: 1;
+}
