--- a/developerdashboard/src/css/dashboard.css
+++ b/developerdashboard/src/css/dashboard.css
@@ -8,9 +8,10 @@
 }
 
 .price-box{
-    width: 35px;
+    width: 35px !important;
     margin-left:5px;
     margin-right: 5px;
+    text-align: center;
 }
 
 .submit-button{
@@ -55,8 +56,16 @@
   outline-offset: 2px;
 }
 
+.submit-button:disabled{
+  background-color: grey;
+}
+
 @media (min-width: 768px) {
   .submit-button-40 {
     padding: .75rem 1.5rem;
   }
+}
+
+.dash{
+
 }
